<package format="2">
  <name>leo_description</name>
  <version>0.0.0</version>
  <description>
    URDF Description package for Leo Rover
  </description>

  <author>Błażej Sowa</author>

  <maintainer email="support@fictionlab.pl">fictionlab</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export>
    <architecture_independent />
  </export>
</package>
