<package format="2">
  <name>leo_description</name>
  <version>2.3.0</version>
  <description>
    URDF Description package for Leo Rover
  </description>

  <maintainer email="support@fictionlab.pl">Fictionlab</maintainer>
  <author email="blazej@fictionlab.pl">Błażej Sowa</author>
  <author email="aleks@fictionlab.pl">Aleksander Szymański</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo_description</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_common/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>rostest</test_depend>

</package>
