<?xml version="1.0"?>
<package format="2">
  <name>leo_teleop</name>
  <version>1.1.0</version>
  <description>Teleop package for Leo Rover</description>

  <maintainer email="blazej@turtlerover.com">Błażej Sowa</maintainer>
  <author email="blazej@turtlerover.com">Błażej Sowa</author>

  <license>MIT</license>

  <url type="website">http://wiki.ros.org/leo</url>
  <url type="bugtracker">https://github.com/LeoRover/leo_common/issues</url>
  <url type="repository">https://github.com/LeoRover/leo_common</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>joy</exec_depend>
  <exec_depend>teleop_twist_joy</exec_depend>
  <exec_depend>teleop_twist_keyboard</exec_depend>

</package>
